--- a/sass/4_components/_dish.scss
+++ b/sass/4_components/_dish.scss
@@ -4,17 +4,6 @@
         opacity: 1;
     }
 }
-@keyframes check-spin {
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes increase-margin-right {
-    to {
-        margin-right: 64px;
-    }
-}
 
 .dish {
     @include box-shadow;
@@ -26,6 +15,7 @@
     animation: reveal 1000ms both 150ms;
     transform: translateY(30px);
     opacity: 0;
+    overflow: hidden;
     
     @for $i from 1 to 4 {
         &:nth-child(#{$i}) {
@@ -58,7 +48,9 @@
 .content-wrapper {
     @include flex(true, center, flex-start);
     position: relative;
+    right: 0;
     margin-right: 10px;
+    transition: margin-right 350ms;
 }
 
 .add-to-cart-container {
@@ -70,32 +62,31 @@
     width: 50px;
     border-top-right-radius: $border-radius;
     border-bottom-right-radius: $border-radius;
-    background-color: $accent,;
+    background-color: $accent;
     transform-origin: right;
-    transform: scaleX(0);
-    opacity: 0;
-    transition: linear 350ms;
+    transform: translateX(100%);
+    transition: all 350ms;
 }
 
 .fa-check-circle {
     font-size: 1.3rem;
     color: text-color($accent);
     transform: rotate(0);
+    transition: transform 350ms;
 }
 
-.dish:hover, .dish:active {
+.dish:active, .dish:hover {
     cursor: pointer;
     
-    .add-to-cart-container {
-        transform: scaleX(1);
-        opacity: 1;
-    }
-    
     .content-wrapper {
-        animation: increase-margin-right 350ms forwards;
+        margin-right: 64px;
+    }
+
+    .add-to-cart-container {
+        transform: translateX(0);
     }
     
     .fa-check-circle {
-        animation: check-spin 350ms forwards 150ms;
+        transform: rotate(360deg);
     }
 }
