--- a/sass/4_components/_spinner.scss
+++ b/sass/4_components/_spinner.scss
@@ -33,7 +33,7 @@
 
 .loader {
     animation-name: hide;
-    animation-delay: 5s;
+    animation-delay: 3s;
     animation-fill-mode: forwards;
 }
 
